kanc/src/tests/sample_code/should_fail/single_file/type_check/missing_match_case/missing_multiple.k
type Boolish {
    true: Boolish,
    false: Boolish,
    maybe: Boolish,
}

let foo = match Boolish.true {
    true => Boolish.false,
};
